--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,9 @@ dependencies = [
     "scikit-learn>=1.3.0",
     "numpy>=1.24.0",
     "tqdm",
-    "pytest>=7.0.0"
+    "pytest>=7.0.0",
+    "plotly>=5.13.0",
+    "pandas>=1.3.0"
 ]
 
 [project.scripts]
