--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "tqdm",
     "pytest>=7.0.0",
     "plotly>=5.13.0",
-    "pandas>=1.3.0"
+    "pandas>=1.3.0",
+    "streamlit>=1.31.0"
 ]
 
 [project.scripts]
