--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,13 +20,16 @@ dependencies = [
     "pytest>=7.0.0",
     "plotly>=5.13.0",
     "pandas>=1.3.0",
-    "streamlit>=1.31.0"
+    "streamlit>=1.31.0",
+    "accelerate>=0.27.0",
+    "watchdog>=3.0.0"
 ]
 
 [project.scripts]
 run = "soda_mmqc.scripts.run:main"
-curate = "soda_mmqc.tools.benchmark_curation:main"
-initialize = "soda_mmqc.scripts.run:initialize_main"
+curate = "soda_mmqc.scripts.run:launch_curation"
+init = "soda_mmqc.scripts.run:initialize_main"
+viz = "soda_mmqc.visualization.plot_results:main"
 
 [tool.hatch.build.targets.wheel]
 packages = ["soda_mmqc"]
