--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,14 +22,15 @@ dependencies = [
     "pandas>=1.3.0",
     "streamlit>=1.31.0",
     "accelerate>=0.27.0",
-    "watchdog>=3.0.0"
+    "watchdog>=3.0.0",
+    "tenacity>=8.2.0"
 ]
 
 [project.scripts]
 run = "soda_mmqc.scripts.run:main"
-curate = "soda_mmqc.scripts.run:launch_curation"
+curate = "soda_mmqc.scripts.curate:main"
 init = "soda_mmqc.scripts.run:initialize_main"
-viz = "soda_mmqc.visualization.plot_results:main"
+viz = "soda_mmqc.scripts.visualize:main"
 
 [tool.hatch.build.targets.wheel]
 packages = ["soda_mmqc"]
