--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,12 @@ dependencies = [
     "pytest>=7.0.0",
     "plotly>=5.13.0",
     "pandas>=1.3.0",
-    "streamlit>=1.31.0",
+    "streamlit>=1.34.0",
+    "streamlit-image-zoom>=0.0.4",
     "accelerate>=0.27.0",
     "watchdog>=3.0.0",
-    "tenacity>=8.2.0"
+    "tenacity>=8.2.0",
+    "pyyaml>=6.0.0"
 ]
 
 [project.scripts]
