--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ sentence-transformers>=2.2.2
 scikit-learn>=1.3.0
 numpy>=1.24.0
 plotly>=5.13.0
-pandas>=1.3.0 
+pandas>=1.3.0
+streamlit-image-zoom>=0.4.1 
