detailed eval based on schema

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,9 @@ SODA_MMQC_CACHE_DIR=cache
 
 # OpenAI key for mmQC benchmarking part of data4rev-dev
 OPENAI_API_KEY=
+
+# Device to use for evaluation
+DEVICE=cpu
+
+# logging level
+LOGGING_LEVEL=DEBUG
