--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,11 +21,14 @@ dependencies = [
     "plotly>=5.13.0",
     "pandas>=1.3.0",
     "streamlit>=1.34.0",
-    "streamlit-image-zoom>=0.0.4",
+    "matplotlib",
     "accelerate>=0.27.0",
     "watchdog>=3.0.0",
     "tenacity>=8.2.0",
-    "pyyaml>=6.0.0"
+    "pyyaml>=6.0.0",
+    "ipywidgets>=8.0.0",
+    "jupyter>=1.0.0",
+    "jupyterlab>=4.0.0",
 ]
 
 [project.scripts]
