--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,13 @@
 SODA_MMQC_CACHE_DIR=cache
 
+# API provider
+API_PROVIDER=
+
 # OpenAI key for mmQC benchmarking part of data4rev-dev
 OPENAI_API_KEY=
+
+# Anthropic API key
+ANTHROPIC_API_KEY=
 
 # Device to use for evaluation
 DEVICE=cpu
