--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ scikit-learn>=1.3.0
 numpy>=1.24.0
 plotly>=5.13.0
 pandas>=1.3.0
-streamlit-image-zoom>=0.0.4 
+streamlit-image-zoom>=0.0.4
+Pillow>=10.0.0 
