oops gitignore and lib, also reverted to response.create

--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
-lib64/
 parts/
 sdist/
 var/
@@ -32,6 +30,10 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
+
+# Ignore build lib directories but not project lib directories
+/lib/
+/lib64/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
